# ts_rest_api_and_tml_tools

./: .gitignore  LICENSE  README.md  endpoint_method_classes.py  pinboard_pdf_example.py  requirements.txt  rest_api_workflow_examples.py  setup.cfg  setup.py  thoughtspot.py  tml.py  tml_changes_monitor.py  tml_import_export_example.py  tsrest.py  tsrestapiv1.py
.github/workflows/: black.yaml  lint.yaml
deployment_scripts/: README.md  create_release_files.py  download_tml.py  import_release_files.py  prod_config.toml  test_config.toml  thoughtspot_release_config.toml  tml_details_from_directory.py
deprecated/: audit_object_access.py  delete_object.py  liveboard_pdf_example.py  rest_api_workflow_examples.py  tsrestapiv1.py  z_deprecated_tml_replicate_from_existing_on_server.py
deprecated/deployment_scripts/: README.md  download_tml.py  thoughtspot_release_config.toml  tml_details_from_directory.py
examples/: README.md  audit_object_access.py  delete_object.py  dependency_examples.py  import_tables_rest_api_example.py  pinboard_pdf_example.py  rest_api_workflow_examples.py  tag_objects.py  tml_changes_monitor.py  tml_create_new_from_existing.py
examples/audit-object-access/: README.md  audit_object_access.py
examples/delete-object/: README.md  delete_object.py
examples/dependencies/: dependency.py
examples/export-liveboard-pdf/: liveboard_pdf.py
examples/import-tables/: import_tables_rest_api.py
examples/localize/: README.md  localize_content.py  retail_banking.en_US  retail_banking.es_US
examples/rest-api-workflow/: rest_api_workflow.py
(+23 files in other folders)
