[metadata]
name = ts_rest_api_and_tml_tools
version = 1.0.0
description = Convenience library for ThoughtSpot REST API and TML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thoughtspot/ts_rest_api_and_tml_tools
author = Bryant Howell
author_email = bryant.howell@thoughtspot.com
license = Proprietary
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls =
    Documentation = https://github.com/thoughtspot/ts_rest_api_and_tml_tools#readme
    Bug Tracker = https://github.com/thoughtspot/ts_rest_api_and_tml_tools/issues


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    thoughtspot-tml>=1.0.7
    thoughtspot-rest-api-v1>=1.0.4

[options.packages.find]
where = src

[options.extras_require]
dev = black;

